Added option for typewriter speed

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,7 +35,7 @@
   "work_experience_free_lancing_desc": "<p>I have developed several projects for a youtuber</p>",
 
   "settings_screen_title": "SETTINGS",
-  "settings_load_animations": "Load animations"
+  "settings_load_animations": "Skip loading"
 
 
 }
