--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -41,5 +41,5 @@
 
 
   "settings_screen_title": "OPÇÕES",
-  "settings_load_animations": "Animações de carregamento"
+  "settings_load_animations": "Pular carregamento"
 }
