Proper config handling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -35,7 +35,9 @@
   "work_experience_free_lancing_desc": "<p>I have developed several projects for a youtuber</p>",
 
   "settings_screen_title": "SETTINGS",
-  "settings_load_animations": "Skip loading"
+  "settings_load_animations": "Skip loading",
+  "settings_language": "Language",
+  "settings_typewriter_speed": "Typewriter Speed"
 
 
 }
