Fixes and polishing

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,10 +11,12 @@
   "projects_screen_title": "PERSONAL PROJECTS",
   "projects_industrial_revolution_title": "Industrial Revolution",
   "projects_industrial_revolution_desc": "An industrial mod for Minecraft that adds several machines, tools, ores and new mechanics",
+  "projects_multiple_minecraft_mods_title": "Multiple Minecraft Mods",
+  "projects_multiple_minecraft_mods_desc": "Multiple minecraft mods such as Wireless Networks, Carrier and Mo' Colors. I also support mods made by a friend that no longer works on them",
   "projects_the_castor_odyssey_title": "The Castor Odyssey",
   "projects_the_castor_odyssey_desc": "A serious game containing several mini games based on the International Bebras Challenge on Informatics to teach Computational Thinking in virtual reality",
   "projects_pokemon_tcg_replay_title": "Pokémon TCG Replay",
-  "projects_pokemon_tcg_replay_desc": "A replay software made in Unity to be able to read post game Pokémon TCG Live logs and simulates the games",
+  "projects_pokemon_tcg_replay_desc": "A WIP replay software made in Unity to be able to read post game Pokémon TCG Live logs and simulates the games",
   "projects_cafeteria_development_website_title": "Cafeteria Development Website",
   "projects_cafeteria_development_website_desc": "A website to showcase and add documentation for mods created by me and a group of friends",
   "projects_simple_text_editor_title": "Simple Text Editor",
