--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -14,7 +14,7 @@
   "projects_the_castor_odyssey_title": "A Odisseia de Castor",
   "projects_the_castor_odyssey_desc": "Um jogo sério contendo vários mini jogos baseados no Desafio Internacional Bebras de Informática para ensinar Pensamento Computacional em realidade virtual",
   "projects_pokemon_tcg_replay_title": "Pokémon TCG Replay",
-  "projects_pokemon_tcg_replay_desc": "Um software de reprodução feito em Unity para ser capaz de ler logs pós-jogo do Pokémon TCG Live e simular os jogos",
+  "projects_pokemon_tcg_replay_desc": "Um software de reprodução WIP feito em Unity para ser capaz de ler logs pós-jogo do Pokémon TCG Live e simular os jogos",
   "projects_cafeteria_development_website_title": "Site da Cafeteria Development",
   "projects_cafeteria_development_website_desc": "Um site para exibir e adicionar documentação para mods criados por mim e um grupo de amigos",
   "projects_simple_text_editor_title": "Editor de Texto Simples",
